[package]
name = "primordial"
version = "0.5.0"
authors = ["The Enarx Project Developers"]
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"
homepage = "https://github.com/enarx/primordial"
repository = "https://github.com/enarx/primordial"
description = "Low-level CPU primitives"
readme = "README.md"
keywords = ["register", "address", "offset", "page"]
categories = ["hardware-support", "memory-management", "no-std"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/primordial", workflow = "test" }
#github = { repository = "enarx/primordial", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/primordial" }
is-it-maintained-open-issues = { repository = "enarx/primordial" }

[features]
alloc = []

[dependencies]
const-default = { version = "1.0.0", optional = true }
